# vkmetrics

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .justplugins  CMakeLists.txt  Justfile  Pipfile  README.md  circle.yml  docker-compose.yml  setup.env  vkm.env  wrap
.circleci/: config.yml
docker/: common_entrypoint.bsh  compiler.Dockerfile  compiler.Justfile  compiler_entrypoint.bsh  pyrc  vkm.Dockerfile  vkm.Justfile  vkm_entrypoint.bsh
scripts/: compile.bsh  task.bsh  test.bsh
source/: CMakeLists.txt
source/engine/: convert.py  metrics.py  truth.py
source/pyvkm/: CMakeLists.txt  pyvkm.cxx  pyvkm_ground_truth.cxx  pyvkm_ground_truth.h  pyvkm_metrics.cxx  pyvkm_metrics.h  pyvkm_obj_io.cxx  pyvkm_obj_io.h
source/vkm/: CMakeLists.txt  vkm_binary_regions.cxx  vkm_binary_regions.h  vkm_containment_tree.cxx  vkm_containment_tree.h  vkm_ground_truth.cxx  vkm_ground_truth.h  vkm_histogram.h  vkm_metrics.cxx  vkm_metrics.h  vkm_obj_io.h  vkm_vrml_color.cxx  vkm_vrml_color.h
source/vkm/tests/: CMakeLists.txt  test_binary_regions.cxx  test_containment_tree.cxx  test_driver.cxx  test_ground_truth.cxx  test_metrics.cxx  test_obj_io.cxx
